--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- Meta Tags -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Site keywords here">
+		<meta name="Pharmanet Formulations" content="Pharmaceutical company, healthcare, medicines, formulations, quality, innovation, patient care">
 		<meta name="description" content="">
 		<meta name='copyright' content=''>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +13,7 @@
         <title>Pharmanet Formulations</title>
 		
 		<!-- Favicon -->
-        <link rel="icon" href="img/favicon.png">
+        <link rel="icon" href="img/fevicon.png">
 		
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
@@ -72,8 +72,7 @@
 							<ul class="top-link">
 								<li><a href="about.html">About</a></li>
 								<li><a href="#">Brands</a></li>
-								<li><a href="#">Contact</a></li>
-								<li><a href="#">FAQ</a></li>
+								<li><a href="contact.html">Contact</a></li>
 							</ul>
 							<!-- End Contact -->
 						</div>
@@ -109,25 +108,25 @@
 								<div class="main-menu">
 									<nav class="navigation">
 										<ul class="nav menu">
-											<li class="active"><a href="#">Home</a>
+											<li class="active"><a href="index.html">Home</a>
 											</li>
 											<li><a href="about.html">About Us</a></li>
 											<li><a href="#">Brand Portfolio<i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="404.html">Anti-Depressant</a></li>
-													<li><a href="404.html">Pediatric</a></li>
-													<li><a href="404.html">Gynacology</a></li>
-													<li><a href="404.html">Ayurvedic</a></li>
-													<li><a href="404.html">Orthopedic</a></li>
-													<li><a href="404.html">Gastroenterlogy</a></li>
-													<li><a href="404.html">Anti-Biotics</a></li>
-													<li><a href="404.html">Resiratory</a></li>
-													<li><a href="404.html">Dermatlogy</a></li>
+													<li><a href="Antidepressant.html">Anti-Depressant</a></li>
+													<li><a href="Pediatric.html">Pediatric</a></li>
+													<li><a href="Gynacology.html">Gynacology</a></li>
+													<li><a href="Ayurvedic.html">Ayurvedic</a></li>
+													<li><a href="Orthopedic.html">Orthopedic</a></li>
+													<li><a href="Gastroenterlogy.html">Gastroenterlogy</a></li>
+													<li><a href="Antibiotic.html">Anti-Biotics</a></li>
+													<li><a href="Respiratory.html">Respiratory</a></li>
+													<li><a href="Dermatlogy.html">Dermatlogy</a></li>
 												</ul>
 											</li>
 											<li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="blog-single.html">Blog Details</a></li>
+													<li><a href="#">Blog Details</a></li>
 												</ul>
 											</li>
 											<li><a href="contact.html">Contact Us</a></li>
@@ -136,11 +135,6 @@
 								</div>
 								<!--/ End Main Menu -->
 							</div>
-							<!-- <div class="col-lg-2 col-12">
-								<div class="get-quote">
-									<a href="appointment.html" class="btn">Book Appointment</a>
-								</div>
-							</div> -->
 						</div>
 					</div>
 				</div>
@@ -496,8 +490,8 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-12">
 						<div class="content">
-							<h2>Do you need Emergency Medical Care? Call @ 1234 56789</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porttitor dictum turpis nec gravida.</p>
+							<!-- <h2>Do you need Emergency Medical Care? Call @ 1234 56789</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porttitor dictum turpis nec gravida.</p> -->
 							<div class="button">
 								<a href="#" class="btn">Contact Now</a>
 								<a href="#" class="btn second">Learn More<i class="fa fa-long-arrow-right"></i></a>
@@ -529,47 +523,47 @@
 							<div class="single-pf">
 								<img src="https://res.cloudinary.com/ddwk3hbiu/image/upload/v1699017261/Akcent%20HealthCare/Brand%20Portfolio/Cardiovascular_l76pxt.png" alt="#">
 								<h2>Anti-Depressant</h2>
-								<a href="portfolio-details.html" class="btn">View Details</a>
+								<a href="Antidepressant.html" class="btn">View Details</a>
 							</div>
 							<div class="single-pf">
 								<img src="img/Pediatrics.jpg" alt="#">
 								<h2>Pediatric</h2>
-								<a href="portfolio-details.html" class="btn">View Details</a>
+								<a href="Pediatric.html" class="btn">View Details</a>
 							</div>
 							<div class="single-pf">
 								<img src="https://res.cloudinary.com/ddwk3hbiu/image/upload/v1699018210/Akcent%20HealthCare/Brand%20Portfolio/Gynecology_ftqyiu.png" alt="#">
 								<h2>Gynacology</h2>
-								<a href="portfolio-details.html" class="btn">View Details</a>
+								<a href="Gynacology.html" class="btn">View Details</a>
 							</div>
 							<div class="single-pf">
 								<img src="img/ayur.jpg" alt="#">
 								<h2>Ayurvedic</h2>
-								<a href="portfolio-details.html" class="btn">View Details</a>
+								<a href="Ayurvedic.html" class="btn">View Details</a>
 							</div>
 							<div class="single-pf">
 								<img src="https://res.cloudinary.com/ddwk3hbiu/image/upload/v1699018211/Akcent%20HealthCare/Brand%20Portfolio/Orthopedics_lrbu3u.png" alt="#">
 								<h2>Orthopedic</h2>
-								<a href="portfolio-details.html" class="btn">View Details</a>
+								<a href="Orthopedic.html" class="btn">View Details</a>
 							</div>
 							<div class="single-pf">
 								<img src="https://res.cloudinary.com/ddwk3hbiu/image/upload/v1699018208/Akcent%20HealthCare/Brand%20Portfolio/Gastroenterology_colora.png" alt="#">
 								<h2>Gastroenterlogy</h2>
-								<a href="portfolio-details.html" class="btn">View Details</a>
+								<a href="Gastroenterlogy.html" class="btn">View Details</a>
 							</div>
 							<div class="single-pf">
 								<img src="https://res.cloudinary.com/ddwk3hbiu/image/upload/v1699018215/Akcent%20HealthCare/Brand%20Portfolio/Physician_ahpr1e.png" alt="#">
 								<h2>Anti-Biotics</h2>
-								<a href="portfolio-details.html" class="btn">View Details</a>
+								<a href="Antibiotic.html" class="btn">View Details</a>
 							</div>
 							<div class="single-pf">
 								<img src="https://res.cloudinary.com/ddwk3hbiu/image/upload/v1699018214/Akcent%20HealthCare/Brand%20Portfolio/Urology_t45kzt.png" alt="#">
 								<h2>Resiratory</h2>
-								<a href="portfolio-details.html" class="btn">View Details</a>
+								<a href="Resiratory.html" class="btn">View Details</a>
 							</div>
 							<div class="single-pf">
 								<img src="img/dermatology.jpg" alt="#">
 								<h2>Dermatlogy</h2>
-								<a href="portfolio-details.html" class="btn">View Details</a>
+								<a href="Dermatlogy.html" class="btn">View Details</a>
 							</div>
 						</div>
 					</div>
@@ -656,9 +650,9 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="section-title">
-							<h2>Keep up with Our Most Recent Medical News.</h2>
+							<h2>Latest Blogs</h2>
 							<img src="img/section-img.png" alt="#">
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
+							<p></p>
 						</div>
 					</div>
 				</div>
@@ -671,9 +665,10 @@
 							</div>
 							<div class="news-body">
 								<div class="news-content">
-									<div class="date">22 Aug, 2020</div>
-									<h2><a href="blog-single.html">We have annnocuced our new product.</a></h2>
-									<p class="text">Lorem ipsum dolor a sit ameti, consectetur adipisicing elit, sed do eiusmod tempor incididunt sed do incididunt sed.</p>
+									<h2><a href="blog-single.html">We have annnocuced our new Ayurvedic product.</a></h2>
+									<p class="text">
+										Ayurvedic medicine is a system of medicine with historical roots in the Indian subcontinent. It is considered a form of alternative medicine, and is one of the world's oldest holistic healing systems.
+									</p>
 								</div>
 							</div>
 						</div>
@@ -687,9 +682,10 @@
 							</div>
 							<div class="news-body">
 								<div class="news-content">
-									<div class="date">15 Jul, 2020</div>
-									<h2><a href="blog-single.html">Top five way for solving teeth problems.</a></h2>
-									<p class="text">Lorem ipsum dolor a sit ameti, consectetur adipisicing elit, sed do eiusmod tempor incididunt sed do incididunt sed.</p>
+									<h2><a href="blog-single.html">Anti-Biotics</a></h2>
+									<p class="text">
+										Antibiotics are medicines that are used to treat infections caused by bacteria. They are not effective against infections caused by viruses, such as the common cold or flu. Antibiotics work by killing bacteria or preventing their growth and reproduction.
+									</p>
 								</div>
 							</div>
 						</div>
@@ -703,9 +699,10 @@
 							</div>
 							<div class="news-body">
 								<div class="news-content">
-									<div class="date">05 Jan, 2020</div>
-									<h2><a href="blog-single.html">We provide highly business soliutions.</a></h2>
-									<p class="text">Lorem ipsum dolor a sit ameti, consectetur adipisicing elit, sed do eiusmod tempor incididunt sed do incididunt sed.</p>
+									<h2><a href="blog-single.html">Pharmaceutical industry</a></h2>
+									<p class="text">
+										The pharmaceutical industry is a global sector that develops, produces, and markets drugs and medications. It plays a crucial role in healthcare by providing innovative treatments and therapies for various diseases and conditions.
+									</p>
 								</div>
 							</div>
 						</div>
