--- a/blog-single.html
+++ b/blog-single.html
@@ -4,16 +4,16 @@
         <!-- Meta Tags -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Site keywords here">
+		<meta name="Pharmanet Formulations" content="Pharmaceutical company, healthcare, medicines, formulations, quality, innovation, patient care">
 		<meta name="description" content="">
 		<meta name='copyright' content=''>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
 		<!-- Title -->
-        <title>Mediplus - Free Medical and Doctor Directory HTML Template.</title>
+        <title>Pharmanet Formulations</title>
 		
 		<!-- Favicon -->
-        <link rel="icon" href="img/favicon.png">
+        <link rel="icon" href="img/fevicon.png">
 		
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
@@ -60,22 +60,6 @@
             </div>
         </div>
         <!-- End Preloader -->
-		
-		<!-- Get Pro Button -->
-		<ul class="pro-features">
-			<a class="get-pro" href="#">Get Pro</a>
-			<li class="big-title">Pro Version Available on Themeforest</li>
-			<li class="title">Pro Version Features</li>
-			<li>2+ premade home pages</li>
-			<li>20+ html pages</li>
-			<li>Color Plate With 12+ Colors</li>
-			<li>Sticky Header / Sticky Filters</li>
-			<li>Working Contact Form With Google Map</li>
-			<div class="button">
-				<a href="http://preview.themeforest.net/item/mediplus-medical-and-doctor-html-template/full_screen_preview/26665910?_ga=2.145092285.888558928.1591971968-344530658.1588061879" target="_blank" class="btn">Pro Version Demo</a>
-				<a href="https://themeforest.net/item/mediplus-medical-and-doctor-html-template/26665910" target="_blank" class="btn">Buy Pro Version</a>
-			</div>
-		</ul>
 	
 		<!-- Header Area -->
 		<header class="header" >
@@ -86,18 +70,17 @@
 						<div class="col-lg-6 col-md-5 col-12">
 							<!-- Contact -->
 							<ul class="top-link">
-								<li><a href="#">About</a></li>
-								<li><a href="#">Doctors</a></li>
-								<li><a href="#">Contact</a></li>
-								<li><a href="#">FAQ</a></li>
+								<li><a href="about.html">About</a></li>
+								<li><a href="#">Brands</a></li>
+								<li><a href="contact.html">Contact</a></li>
 							</ul>
 							<!-- End Contact -->
 						</div>
 						<div class="col-lg-6 col-md-7 col-12">
 							<!-- Top Contact -->
 							<ul class="top-contact">
-								<li><i class="fa fa-phone"></i>+880 1234 56789</li>
-								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">support@yourmail.com</a></li>
+								<li><i class="fa fa-phone"></i>+91 0000000000</li>
+								<li><i class="fa fa-envelope"></i><a href="mailto:support@pharamanetformulations.com">support@pharamanetformulations.com</a></li>
 							</ul>
 							<!-- End Top Contact -->
 						</div>
@@ -112,7 +95,7 @@
 						<div class="row">
 							<div class="col-lg-3 col-md-3 col-12">
 								<!-- Start Logo -->
-								<div class="logo">
+								<div class="logo m-2">
 									<a href="index.html"><img src="img/logo.png" alt="#"></a>
 								</div>
 								<!-- End Logo -->
@@ -125,21 +108,25 @@
 								<div class="main-menu">
 									<nav class="navigation">
 										<ul class="nav menu">
-											<li class="active"><a href="#">Home <i class="icofont-rounded-down"></i></a>
-												<ul class="dropdown">
-													<li><a href="index.html">Home Page 1</a></li>
-												</ul>
+											<li class="active"><a href="index.html">Home</a>
 											</li>
-											<li><a href="#">Doctos </a></li>
-											<li><a href="#">Services </a></li>
-											<li><a href="#">Pages <i class="icofont-rounded-down"></i></a>
+											<li><a href="about.html">About Us</a></li>
+											<li><a href="#">Brand Portfolio<i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="404.html">404 Error</a></li>
+													<li><a href="Antidepressant.html">Anti-Depressant</a></li>
+													<li><a href="Pediatric.html">Pediatric</a></li>
+													<li><a href="Gynacology.html">Gynacology</a></li>
+													<li><a href="Ayurvedic.html">Ayurvedic</a></li>
+													<li><a href="Orthopedic.html">Orthopedic</a></li>
+													<li><a href="Gastroenterlogy.html">Gastroenterlogy</a></li>
+													<li><a href="Antibiotic.html">Anti-Biotics</a></li>
+													<li><a href="Respiratory.html">Respiratory</a></li>
+													<li><a href="Dermatlogy.html">Dermatlogy</a></li>
 												</ul>
 											</li>
 											<li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="blog-single.html">Blog Details</a></li>
+													<li><a href="#">Blog Details</a></li>
 												</ul>
 											</li>
 											<li><a href="contact.html">Contact Us</a></li>
@@ -147,11 +134,6 @@
 									</nav>
 								</div>
 								<!--/ End Main Menu -->
-							</div>
-							<div class="col-lg-2 col-12">
-								<div class="get-quote">
-									<a href="appointment.html" class="btn">Book Appointment</a>
-								</div>
 							</div>
 						</div>
 					</div>
@@ -435,89 +417,84 @@
 		<!--/ End Single News -->
 		
 		<!-- Footer Area -->
-		<footer id="footer" class="footer ">
-			<!-- Footer Top -->
-			<div class="footer-top">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-md-6 col-12">
-							<div class="single-footer">
-								<h2>About Us</h2>
-								<p>Lorem ipsum dolor sit am consectetur adipisicing elit do eiusmod tempor incididunt ut labore dolore magna.</p>
-								<!-- Social -->
-								<ul class="social">
-									<li><a href="#"><i class="icofont-facebook"></i></a></li>
-									<li><a href="#"><i class="icofont-google-plus"></i></a></li>
-									<li><a href="#"><i class="icofont-twitter"></i></a></li>
-									<li><a href="#"><i class="icofont-vimeo"></i></a></li>
-									<li><a href="#"><i class="icofont-pinterest"></i></a></li>
-								</ul>
-								<!-- End Social -->
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6 col-12">
-							<div class="single-footer f-link">
-								<h2>Quick Links</h2>
-								<div class="row">
-									<div class="col-lg-6 col-md-6 col-12">
-										<ul>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Home</a></li>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>About Us</a></li>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Services</a></li>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Our Cases</a></li>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Other Links</a></li>	
-										</ul>
-									</div>
-									<div class="col-lg-6 col-md-6 col-12">
-										<ul>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Consuling</a></li>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Finance</a></li>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Testimonials</a></li>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>FAQ</a></li>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Contact Us</a></li>	
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6 col-12">
-							<div class="single-footer">
-								<h2>Open Hours</h2>
-								<p>Lorem ipsum dolor sit ame consectetur adipisicing elit do eiusmod tempor incididunt.</p>
-								<ul class="time-sidual">
-									<li class="day">Monday - Fridayp <span>8.00-20.00</span></li>
-									<li class="day">Saturday <span>9.00-18.30</span></li>
-									<li class="day">Monday - Thusday <span>9.00-15.00</span></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6 col-12">
-							<div class="single-footer">
-								<h2>Newsletter</h2>
-								<p>subscribe to our newsletter to get allour news in your inbox.. Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
-								<form action="mail/mail.php" method="get" target="_blank" class="newsletter-inner">
-									<input name="email" placeholder="Email Address" class="common-input" onfocus="this.placeholder = ''"
-										onblur="this.placeholder = 'Your email address'" required="" type="email">
-									<button class="button"><i class="icofont icofont-paper-plane"></i></button>
-								</form>
-							</div>
-						</div>
+		<div class="container-fluid text-center text-sm-start text-black bg-white w-100">
+            <footer class="d-sm-flex justify-content-center py-5 mx-5 border-top">
+                <div class="col d-md-block">
+                    <img class="w-75 rounded-4" src="img/logo.png" alt="">
+					<p class="m-2">+91 0000000000</p>
+					<p class="m-2">info@pharmanetformulations.com</p>
+                    <address>
+					<!-- <i class="fa fa-location-arrow" aria-hidden="true"></i> -->
+                        <p class="m-2"> 275, Block-Jasmine Tower, Gaur Saundaryam, Sector-Techzone-IV, Greater Noida (West)</p>
+                        
+                    </address>
+                </div>
+
+                <div class="col d-none d-sm-block">
+
+                </div>
+
+                <div class="col mb-3">
+                    <h5>About Us</h5>
+                    <ul class="nav flex-column mt-2">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white-50">Company</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white-50">Our Team</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white-50">Contact Us</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white-50">Our Brands</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white-50">Our Products</a>
+                        </li>
+                    </ul>
+                </div>
+				<div class="col mb-3">
+					<h5>Quick Links</h5>
+					<ul class="nav flex-column mt-2">
+						<li><a href="404.html">Home</a></li>
+						<li><a href="404.html">About Us</a></li>
+						<li><a href="404.html">Brand Portfolio</a></li>
+						<li><a href="404.html">Blog</a></li>
+						<li><a href="404.html">Contact Us</a></li>
+					</ul>
 					</div>
-				</div>
-			</div>
-			<!--/ End Footer Top -->
-			<!-- Copyright -->
+                <div class="col mb-3">
+                    <h5>Brand Portfolio</h5>
+                    <ul class="nav flex-column mt-2">
+						<li><a href="404.html">Anti-Depressant</a></li>
+						<li><a href="404.html">Pediatric</a></li>
+						<li><a href="404.html">Gynacology</a></li>
+						<li><a href="404.html">Ayurvedic</a></li>
+						<li><a href="404.html">Orthopedic</a></li>
+						<li><a href="404.html">Gastroenterlogy</a></li>
+						<li><a href="404.html">Anti-Biotics</a></li>
+						<li><a href="404.html">Resiratory</a></li>
+						<li><a href="404.html">Dermatlogy</a></li>
+                    </ul>
+                </div>
+
+            </footer>
+            <ul class="nav justify-content-center d-flex pb-3">
+                <li class="ms-3"><a class="text-white-50" href="#"><i
+                            class="fa-brands fa-twitter fa-xl fa-fw"></i></i></a>
+                </li>
+                <li class="ms-3"><a class="text-white-50" href="#"><i class="fa-brands fa-facebook fa-xl fa-fw"
+                            aria-hidden="true"></i></a></li>
+                <li class="ms-3"><a class="text-white-50" href="#"><i class="fa-brands fa-instagram fa-xl fa-fw"
+                            aria-hidden="true"></i></a></li>
+            </ul>
 			<div class="copyright">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-12">
 							<div class="copyright-content">
-								<p>© Copyright 2018  |  All Rights Reserved by <a href="https://www.wpthemesgrid.com" target="_blank">wpthemesgrid.com</a> </p>
+								<p>© Copyright 2025  |  All Rights Reserved by <a href="https://www.pharmanetformulations.com" target="_blank">pharmanetformulations.com</a> </p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+        </div>
+		
 			<!--/ End Copyright -->
 		</footer>
 		<!--/ End Footer Area -->
@@ -547,16 +524,14 @@
 		<!-- Tilt Jquery JS -->
 		<script src="js/tilt.jquery.min.js"></script>
 		<!-- Owl Carousel JS -->
-        <script src="js/owl-carousel.js"></script>
-		<!-- counterup JS -->
-		<script src="js/jquery.counterup.min.js"></script>
+        <script src="js/owl-carousel.js"></script>p JS -->
+		<script src="jsp.min.js"></script>
 		<!-- Steller JS -->
 		<script src="js/steller.js"></script>
 		<!-- Wow JS -->
 		<script src="js/wow.min.js"></script>
 		<!-- Magnific Popup JS -->
-		<script src="js/jquery.magnific-popup.min.js"></script>
-		<!-- Counter Up CDN JS -->
+		<script src="js/jquery.magnific-popup.min.js"></script>Up CDN JS -->
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 		<!-- Bootstrap JS -->
 		<script src="js/bootstrap.min.js"></script>
