--- a/contact.html
+++ b/contact.html
@@ -1,155 +1,147 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
+    <head>
+        <!-- Meta Tags -->
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="Pharmanet Formulations" content="Pharmaceutical company, healthcare, medicines, formulations, quality, innovation, patient care">
+		<meta name="description" content="">
+		<meta name='copyright' content=''>
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		
+		<!-- Title -->
+        <title>Pharmanet Formulations</title>
+		
+		<!-- Favicon -->
+        <link rel="icon" href="img/fevicon.png">
+		
+		<!-- Google Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 
-<head>
-	<!-- Meta Tags -->
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="keywords" content="Site keywords here">
-	<meta name="description" content="">
-	<meta name='copyright' content=''>
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<!-- Nice Select CSS -->
+		<link rel="stylesheet" href="css/nice-select.css">
+		<!-- Font Awesome CSS -->
+        <link rel="stylesheet" href="css/font-awesome.min.css">
+		<!-- icofont CSS -->
+        <link rel="stylesheet" href="css/icofont.css">
+		<!-- Slicknav -->
+		<link rel="stylesheet" href="css/slicknav.min.css">
+		<!-- Owl Carousel CSS -->
+        <link rel="stylesheet" href="css/owl-carousel.css">
+		<!-- Datepicker CSS -->
+		<link rel="stylesheet" href="css/datepicker.css">
+		<!-- Animate CSS -->
+        <link rel="stylesheet" href="css/animate.min.css">
+		<!-- Magnific Popup CSS -->
+        <link rel="stylesheet" href="css/magnific-popup.css">
+		
+		<!-- Medipro CSS -->
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/responsive.css">
+		
+    </head>
+    <body>
+	
+		<!-- Preloader -->
+        <div class="preloader">
+            <div class="loader">
+                <div class="loader-outter"></div>
+                <div class="loader-inner"></div>
 
-	<!-- Title -->
-	<title>Mediplus - Free Medical and Doctor Directory HTML Template.</title>
-
-	<!-- Favicon -->
-	<link rel="icon" href="img/favicon.png">
-
-	<!-- Google Fonts -->
-	<link
-		href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
-		rel="stylesheet">
-
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<!-- Nice Select CSS -->
-	<link rel="stylesheet" href="css/nice-select.css">
-	<!-- Font Awesome CSS -->
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<!-- icofont CSS -->
-	<link rel="stylesheet" href="css/icofont.css">
-	<!-- Slicknav -->
-	<link rel="stylesheet" href="css/slicknav.min.css">
-	<!-- Owl Carousel CSS -->
-	<link rel="stylesheet" href="css/owl-carousel.css">
-	<!-- Datepicker CSS -->
-	<link rel="stylesheet" href="css/datepicker.css">
-	<!-- Animate CSS -->
-	<link rel="stylesheet" href="css/animate.min.css">
-	<!-- Magnific Popup CSS -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
-
-	<!-- Medipro CSS -->
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="css/responsive.css">
-
-</head>
-
-<body>
-
-	<!-- Preloader -->
-	<div class="preloader">
-		<div class="loader">
-			<div class="loader-outter"></div>
-			<div class="loader-inner"></div>
-
-			<div class="indicator">
-				<svg width="16px" height="12px">
-					<polyline id="back" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
-					<polyline id="front" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
-				</svg>
-			</div>
-		</div>
-	</div>
-	<!-- End Preloader -->
-
-
-	<!-- Header Area -->
-	<header class="header">
-		<!-- Topbar -->
-		<div class="topbar">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-6 col-md-5 col-12">
-						<!-- Contact -->
-						<ul class="top-link">
-							<li><a href="#">About</a></li>
-							<li><a href="#">Doctors</a></li>
-							<li><a href="#">Contact</a></li>
-							<li><a href="#">FAQ</a></li>
-						</ul>
-						<!-- End Contact -->
-					</div>
-					<div class="col-lg-6 col-md-7 col-12">
-						<!-- Top Contact -->
-						<ul class="top-contact">
-							<li><i class="fa fa-phone"></i>+880 1234 56789</li>
-							<li><i class="fa fa-envelope"></i><a
-									href="mailto:support@yourmail.com">support@yourmail.com</a></li>
-						</ul>
-						<!-- End Top Contact -->
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End Topbar -->
-		<!-- Header Inner -->
-		<div class="header-inner">
-			<div class="container">
-				<div class="inner">
+                <div class="indicator"> 
+                    <svg width="16px" height="12px">
+                        <polyline id="back" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+                        <polyline id="front" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <!-- End Preloader -->
+	
+		<!-- Header Area -->
+		<header class="header" >
+			<!-- Topbar -->
+			<div class="topbar">
+				<div class="container">
 					<div class="row">
-						<div class="col-lg-3 col-md-3 col-12">
-							<!-- Start Logo -->
-							<div class="logo">
-								<a href="index.html"><img src="img/logo.png" alt="#"></a>
-							</div>
-							<!-- End Logo -->
-							<!-- Mobile Nav -->
-							<div class="mobile-nav"></div>
-							<!-- End Mobile Nav -->
+						<div class="col-lg-6 col-md-5 col-12">
+							<!-- Contact -->
+							<ul class="top-link">
+								<li><a href="about.html">About</a></li>
+								<li><a href="#">Brands</a></li>
+								<li><a href="contact.html">Contact</a></li>
+							</ul>
+							<!-- End Contact -->
 						</div>
-						<div class="col-lg-7 col-md-9 col-12">
-							<!-- Main Menu -->
-							<div class="main-menu">
-								<nav class="navigation">
-									<ul class="nav menu">
-										<li class="active"><a href="#">Home <i class="icofont-rounded-down"></i></a>
-											<ul class="dropdown">
-												<li><a href="index.html">Home Page 1</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Doctos </a></li>
-										<li><a href="#">Services </a></li>
-										<li><a href="#">Pages <i class="icofont-rounded-down"></i></a>
-											<ul class="dropdown">
-												<li><a href="404.html">404 Error</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
-											<ul class="dropdown">
-												<li><a href="blog-single.html">Blog Details</a></li>
-											</ul>
-										</li>
-										<li><a href="contact.html">Contact Us</a></li>
-									</ul>
-								</nav>
-							</div>
-							<!--/ End Main Menu -->
+						<div class="col-lg-6 col-md-7 col-12">
+							<!-- Top Contact -->
+							<ul class="top-contact">
+								<li><i class="fa fa-phone"></i>+91 0000000000</li>
+								<li><i class="fa fa-envelope"></i><a href="mailto:support@pharamanetformulations.com">support@pharamanetformulations.com</a></li>
+							</ul>
+							<!-- End Top Contact -->
 						</div>
-						<div class="col-lg-2 col-12">
-							<div class="get-quote">
-								<a href="appointment.html" class="btn">Book Appointment</a>
+					</div>
+				</div>
+			</div>
+			<!-- End Topbar -->
+			<!-- Header Inner -->
+			<div class="header-inner">
+				<div class="container">
+					<div class="inner">
+						<div class="row">
+							<div class="col-lg-3 col-md-3 col-12">
+								<!-- Start Logo -->
+								<div class="logo m-2">
+									<a href="index.html"><img src="img/logo.png" alt="#"></a>
+								</div>
+								<!-- End Logo -->
+								<!-- Mobile Nav -->
+								<div class="mobile-nav"></div>
+								<!-- End Mobile Nav -->
+							</div>
+							<div class="col-lg-7 col-md-9 col-12">
+								<!-- Main Menu -->
+								<div class="main-menu">
+									<nav class="navigation">
+										<ul class="nav menu">
+											<li class="active"><a href="index.html">Home</a>
+											</li>
+											<li><a href="about.html">About Us</a></li>
+											<li><a href="#">Brand Portfolio<i class="icofont-rounded-down"></i></a>
+												<ul class="dropdown">
+													<li><a href="Antidepressant.html">Anti-Depressant</a></li>
+													<li><a href="Pediatric.html">Pediatric</a></li>
+													<li><a href="Gynacology.html">Gynacology</a></li>
+													<li><a href="Ayurvedic.html">Ayurvedic</a></li>
+													<li><a href="Orthopedic.html">Orthopedic</a></li>
+													<li><a href="Gastroenterlogy.html">Gastroenterlogy</a></li>
+													<li><a href="Antibiotic.html">Anti-Biotics</a></li>
+													<li><a href="Respiratory.html">Respiratory</a></li>
+													<li><a href="Dermatlogy.html">Dermatlogy</a></li>
+												</ul>
+											</li>
+											<li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
+												<ul class="dropdown">
+													<li><a href="#">Blog Details</a></li>
+												</ul>
+											</li>
+											<li><a href="contact.html">Contact Us</a></li>
+										</ul>
+									</nav>
+								</div>
+								<!--/ End Main Menu -->
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<!--/ End Header Inner -->
-	</header>
-	<!-- End Header Area -->
+			<!--/ End Header Inner -->
+		</header>
+		<!-- End Header Area -->
 
 	<!-- Breadcrumbs -->
 	<div class="breadcrumbs overlay">
@@ -169,38 +161,54 @@
 		</div>
 	</div>
 	<!-- End Breadcrumbs -->
-	<div class="contact m-6">
+	<section class="contact-us section m-4">
 		<div class="contact-info">
-			<div class="contact-info-card"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-					<path
-						d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z">
-					</path>
-				</svg><a href="tel:911145009554">+91 0000000000</a></div>
-			<div class="contact-info-card"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-					<path
-						d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z">
-					</path>
-				</svg><a href="mailto:akcenthealthcare@gmail.com"
-					style="text-transform: lowercase;">info@pharmanetformulations.com</a></div>
-			<div class="contact-info-card"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
-					<path
-						d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z">
-					</path>
-				</svg><a
-					href="https://www.google.com/maps?ll=28.649983,77.145366&amp;z=15&amp;t=m&amp;hl=en&amp;gl=IN&amp;mapclient=embed&amp;cid=6992852429798267520">
-					275, Block-Jasmine Tower, Gaur Saundaryam, Sector-Techzone-IV, Greater Noida (West)</a></div>
-		</div>
-	</div>
+			<div class="row">
+				<!-- single-info -->
+				<div class="col-lg-4 col-12 ">
+					<div class="single-info">
+						<i class="icofont icofont-ui-call"></i>
+						<div class="content">
+							<h3>+91 0000000000</h3>
 
+						</div>
+					</div>
+				</div>
+				<!--/End single-info -->
+				<!-- single-info -->
+				<div class="col-lg-4 col-12 ">
+					<div class="single-info">
+						<i class="icofont-google-map"></i>
+						<div class="content">
+							<h3>275, Block-Jasmine Tower, Gaur Saundaryam, Sector-Techzone-IV, Greater Noida (West)</h3>
+						</div>
+					</div>
+				</div>
+				<!--/End single-info -->
+				<!-- single-info -->
+				<div class="col-lg-4 col-12 ">
+					<div class="single-info">
+						<i class="icofont icofont-email"></i>
+						<div class="content">
+							<h3>info@pharmanetformulations.com</h3>
+						</div>
+					</div>
+				</div>
+				<!--/End single-info -->
+			</div>
+		</div>
+	</section>
 	<!-- Footer Area -->
 	<div class="container-fluid text-center text-sm-start text-black bg-white w-100">
 		<footer class="d-sm-flex justify-content-center py-5 mx-5 border-top">
 			<div class="col d-md-block">
 				<img class="w-75 rounded-4" src="img/logo.png" alt="">
-				<address><i class="fa fa-location-arrow" aria-hidden="true"></i>
-					<p> 275, Block-Jasmine Tower, Gaur Saundaryam, Sector-Techzone-IV, Greater Noida (West)</p>
-					<p class="text-white-50">@ pharmanetformulations.com</p>
-					<p class="text-white-50">© 2025</p>
+				<p class="m-2">+91 0000000000</p>
+				<p class="m-2">info@pharmanetformulations.com</p>
+				<address>
+				<!-- <i class="fa fa-location-arrow" aria-hidden="true"></i> -->
+					<p class="m-2"> 275, Block-Jasmine Tower, Gaur Saundaryam, Sector-Techzone-IV, Greater Noida (West)</p>
+					
 				</address>
 			</div>
 
@@ -221,22 +229,35 @@
 					</li>
 				</ul>
 			</div>
-
 			<div class="col mb-3">
-				<h5>Brands</h5>
+				<h5>Quick Links</h5>
 				<ul class="nav flex-column mt-2">
-					<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white-50">Programing</a>
-					</li>
-					<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white-50">Jee/Neet</a></li>
-					<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white-50">CBSE</a></li>
-					<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white-50">Business</a></li>
-					<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white-50">Research</a></li>
+					<li><a href="404.html">Home</a></li>
+					<li><a href="404.html">About Us</a></li>
+					<li><a href="404.html">Brand Portfolio</a></li>
+					<li><a href="404.html">Blog</a></li>
+					<li><a href="404.html">Contact Us</a></li>
+				</ul>
+				</div>
+			<div class="col mb-3">
+				<h5>Brand Portfolio</h5>
+				<ul class="nav flex-column mt-2">
+					<li><a href="404.html">Anti-Depressant</a></li>
+					<li><a href="404.html">Pediatric</a></li>
+					<li><a href="404.html">Gynacology</a></li>
+					<li><a href="404.html">Ayurvedic</a></li>
+					<li><a href="404.html">Orthopedic</a></li>
+					<li><a href="404.html">Gastroenterlogy</a></li>
+					<li><a href="404.html">Anti-Biotics</a></li>
+					<li><a href="404.html">Resiratory</a></li>
+					<li><a href="404.html">Dermatlogy</a></li>
 				</ul>
 			</div>
 
 		</footer>
 		<ul class="nav justify-content-center d-flex pb-3">
-			<li class="ms-3"><a class="text-white-50" href="#"><i class="fa-brands fa-twitter fa-xl fa-fw"></i></i></a>
+			<li class="ms-3"><a class="text-white-50" href="#"><i
+						class="fa-brands fa-twitter fa-xl fa-fw"></i></i></a>
 			</li>
 			<li class="ms-3"><a class="text-white-50" href="#"><i class="fa-brands fa-facebook fa-xl fa-fw"
 						aria-hidden="true"></i></a></li>
@@ -248,19 +269,18 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-12">
 						<div class="copyright-content">
-							<p>© Copyright 2025 | All Rights Reserved by <a href="https://www.pharmanetformulations.com"
-									target="_blank">pharmanetformulations.com</a> </p>
+							<p>© Copyright 2025  |  All Rights Reserved by <a href="https://www.pharmanetformulations.com" target="_blank">pharmanetformulations.com</a> </p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
-	<!--/ End Copyright -->
+	
+		<!--/ End Copyright -->
 	</footer>
 	<!--/ End Footer Area -->
-
+	
 	<!-- jquery Min JS -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jquery Migrate JS -->
@@ -286,27 +306,18 @@
 	<!-- Tilt Jquery JS -->
 	<script src="js/tilt.jquery.min.js"></script>
 	<!-- Owl Carousel JS -->
-	<script src="js/owl-carousel.js"></script>
-	<!-- counterup JS -->
-	<script src="js/jquery.counterup.min.js"></script>
+	<script src="js/owl-carousel.js"></script>p JS -->
+	<script src="jsp.min.js"></script>
 	<!-- Steller JS -->
 	<script src="js/steller.js"></script>
 	<!-- Wow JS -->
 	<script src="js/wow.min.js"></script>
 	<!-- Magnific Popup JS -->
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<!-- Counter Up CDN JS -->
+	<script src="js/jquery.magnific-popup.min.js"></script>Up CDN JS -->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-	<!-- Google Map API Key JS -->
-	<script src="https://maps.google.com/maps/api/js?key=AIzaSyDGqTyqoPIvYxhn_Sa7ZrK5bENUWhpCo0w"></script>
-	<!-- Gmaps JS -->
-	<script src="js/gmaps.min.js"></script>
-	<!-- Map Active JS -->
-	<script src="js/map-active.js"></script>
 	<!-- Bootstrap JS -->
 	<script src="js/bootstrap.min.js"></script>
 	<!-- Main JS -->
 	<script src="js/main.js"></script>
 </body>
-
 </html>
