--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 									<div class="single-content">
 										<!-- <span>Lorem Amet</span> -->
 										<h3>Anti-Depressant</h3>
-										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
+										<a href="Antidepressant.html">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
 							</div>
@@ -234,7 +234,7 @@
 									<div class="single-content">
 										<!-- <span>Fusce Porttitor</span> -->
 										<h3>Pediatric</h3>
-										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
+										<a href="Pediatric.html">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
 							</div>
@@ -250,7 +250,7 @@
 									<div class="single-content">
 										<!-- <span>Donec luctus</span> -->
 										<h3>Gynacology</h3>
-										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
+										<a href="Gynacology.html">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
 							</div>
@@ -266,7 +266,7 @@
 									<div class="single-content">
 										<!-- <span>Donec luctus</span> -->
 										<h3>Ayurvedic</h3>
-										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
+										<a href="Ayurvedic.html">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
 							</div>
@@ -282,7 +282,7 @@
 									<div class="single-content">
 										<!-- <span>Donec luctus</span> -->
 										<h3>Orthopedic</h3>
-										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
+										<a href="Orthopaedic.html">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
 							</div>
@@ -298,7 +298,7 @@
 									<div class="single-content">
 										<!-- <span>Donec luctus</span> -->
 										<h3>Gastroenterlogy</h3>
-										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
+										<a href="Gastroenterology.html">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
 							</div>
@@ -314,7 +314,7 @@
 									<div class="single-content">
 										<!-- <span>Donec luctus</span> -->
 										<h3>Anti-Biotics</h3>
-										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
+										<a href="Antibiotic.html">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
 							</div>
@@ -329,8 +329,8 @@
 									</div>
 									<div class="single-content">
 										<!-- <span>Donec luctus</span> -->
-										<h3>Resiratory</h3>
-										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
+										<h3>Respiratory</h3>
+										<a href="Respiratory.html">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
 							</div>
@@ -346,7 +346,7 @@
 									<div class="single-content">
 										<!-- <span>Donec luctus</span> -->
 										<h3>Dermatlogy</h3>
-										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
+										<a href="Dermatlogy">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
 							</div>
